@@ -5,6 +5,9 @@
 * Project's CLI provided by Invoke library
 * Module renamed: **mockify.times** -> **mockify.cardinality** (old one was
   made deprecated)
+* Module **mockify.helpers** made deprecated and merged with library core - now
+  available via **mockify** directly
+* Module **mockify.engine** is now available directly via **mockify**
 
 0.4.0
 -----
